<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:minWidth="350dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:theme="@style/AppTheme">

    <EditText
            android:id="@+id/editNameTxt"
            android:hint="Naam"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    <EditText
            android:id="@+id/editBedragTxt"
            android:hint="Bedrag"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editNameTxt" android:inputType="numberDecimal"/>

    <EditText
            android:id="@+id/editOmschrijvingTxt"
            android:hint="Omschrijving"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editBedragTxt"/>


</RelativeLayout>