...
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/main_menu_scrollview" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <Button
                    android:text="@string/menu_kalender_btn"
                    android:backgroundTint="#cc3c27"
...
                    tools:layout_editor_absoluteX="154dp" android:id="@+id/kalenderBtn"
                    android:textColor="@android:color/white"/>
            <Button
                    android:text="@string/menu_drankenlijst_btn"
                    android:backgroundTint="#cc3c27"
                    android:layout_width="match_parent"
                    android:layout_height="133dp" android:id="@+id/main_drankenBtn"
                    android:textColor="@android:color/white"/>
            <Button
                    android:text="@string/menu_contact_btn"
                    android:backgroundTint="#cc3c27"
                    android:layout_width="match_parent"
                    android:layout_height="133dp" android:id="@+id/main_contactBtn"
...
