<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
         android:id="@+id/deleteAllBtn"
         android:title="Verwijder alle schulden"
         app:showAsAction="never"/>
</menu>